# whurl

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  mvp.txt  package.nix  result  shell.nix
.direnv/: flake-profile-1-link
examples/: collection.json  collection.toml
grammar/: functions.txt  loops.txt  objects.txt  variables.txt
src/: cli.rs  main.rs
