[package]
name = "whurl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
serde_json = "=1.0.1"
serde = "1.0.209"
serde_derive = "1.0.209"
ureq = "2.10.1"
toml = "0.8.19"
path-clean = "1.0.1"

[dependencies.clap]
version = "4.5.1"
features = ["cargo", "derive", "unicode", "wrap_help"]
